The intent is to make the code available to the Java community with the minimum
of restrictions. If the license causes you problems please contact the mailing list.

**  Please also check out our related projects   **
** http://www.joda.org/joda-time/related.html **


Enhancements since 2.4
----------------------
- Add regex based Period formatting [#166]
  Regex based formatting allows for languages with more complex rules, such as Polish


Compatibility with 2.4
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes, except
 - The constant DateTimeZone.UTC has changed implementation type
   It used to be a FixedDateTimeZone, now it is a UTCDateTimeZone
   This avoids a potential deadlock scenario
   Serialization is unaffected
   This change will only be observable if you cast the UTC constant to FixedDateTimeZone

Serialization compatible - Yes

Data compatible - Yes, except
 - DateTimeZone data updated to version 2014e

Semantic compatible - Yes


Deprecations since 2.4
----------------------


Bug fixes since 2.4
-------------------
- Additional overflow check for Duration constructor [#159]
  Handle MIN/MAX value better.

- Handle complex prefix/suffix combinations [#154, #169]
  For example, 'm' for minutes and 'ms' for milliseconds
  which both start with 'm'

- Fix deadlock [#171]
  Referencing DateTimeZone and FixedDateTimeZone from two threads at startup could deadlock
  Add package scoped UTCDateTimeZone class to avoid this


Scala
--------
Joda-Time uses annotations from Joda-Convert.
In the Java programming language, this dependency is optional, however in Scala it is not.
Scala users must manually add the Joda-Convert v1.2 dependency.


Feedback
--------
Feedback is best received using GitHub issues and Pull Requests.
https://github.com/JodaOrg/joda-time/

Feedback is also welcomed via the joda-interest mailing list.

The Joda team
http://www.joda.org/joda-time/